--- a/amardaan/templates/statistics.html
+++ b/amardaan/templates/statistics.html
@@ -218,7 +218,7 @@
                                     <path d="M21 12.5V29.33" stroke="#FF4423" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>                                                               
                             </div>
-                            <h1 class="price">৳ 50,530.00<span class="price-currency">(TK)</span></h1>                            
+                            <h1 class="price">{{ total_amt }}<span class="price-currency">(TK)</span></h1>
                             <p><span>From January 2023 - August 2023</p></span>
                         </div>
                     </div>
