--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -80,6 +80,7 @@
         </script>
       {% block script %}{% endblock %}
 </body>
+{% block footer %}
 <footer class="footer-section">
   <div class="container">
       <div class="footer-cta pt-5 pb-5">
@@ -169,3 +170,4 @@
     </div>
 </div>
 </footer>
+{% endblock %}
