--- a/AmarDaan/templates/user_form.html
+++ b/AmarDaan/templates/user_form.html
@@ -48,7 +48,7 @@
         <span>or use your account</span>
         <input class="round" type="email" name="email" placeholder="Email" />
         <input class="round" type="password" name="password" placeholder="Password" />
-        <a href="#">Forgot your password?</a>
+        <a href="{{url_for('auth.forgot_password')}}">Forgot your password?</a>
         <button>Sign In</button>
       </form>
     </div>
