--- a/amardaan/templates/statistics.html
+++ b/amardaan/templates/statistics.html
@@ -23,13 +23,15 @@
                 </div>
                 <ul class="side-nav">
                     <span class="side-nav__header">Main Menu</span>
-                    <li class="side-nav__item side-nav__item-active">
+                    {% if user.id == 1 %}
+                        <li class="side-nav__item side-nav__item-active">
                         <a href="{{url_for('views.statistics')}}" style="text-decoration: none;">
                         <svg width="22" height="23" viewBox="0 0 22 23" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path d="M9.23201 3.4202L9.23239 3.41989C10.2108 2.63408 11.7843 2.63834 12.7781 3.42994C12.7783 3.43005 12.7784 3.43015 12.7785 3.43025L18.7784 8.2301C18.7789 8.23054 18.7795 8.23099 18.78 8.23143C19.1189 8.50835 19.4146 8.94381 19.6058 9.44415C19.7968 9.94409 19.8672 10.4662 19.8014 10.8985L18.6475 17.8037C18.6474 17.8042 18.6473 17.8047 18.6472 17.8052C18.4217 19.0989 17.1608 20.1667 15.8585 20.1667H6.1418C4.81982 20.1667 3.58766 19.1252 3.36227 17.8148C3.36221 17.8145 3.36215 17.8142 3.36209 17.8138L2.20746 10.9043L2.20726 10.9032C2.13345 10.4677 2.19947 9.94466 2.39002 9.44498C2.58055 8.94535 2.87982 8.51038 3.22697 8.2334L3.22784 8.2327L9.23201 3.4202ZM11.0001 18.1876C11.6521 18.1876 12.1876 17.652 12.1876 17.0001V14.2501C12.1876 13.5981 11.6521 13.0626 11.0001 13.0626C10.3482 13.0626 9.81263 13.5981 9.81263 14.2501V17.0001C9.81263 17.652 10.3482 18.1876 11.0001 18.1876Z" fill="currentColor" stroke="currentColor"/>
-                        </svg> </a>                      
+                        </svg> </a>
                         <span>Dashboard</span>
                     </li>
+                    {% endif %}
                     <li class="side-nav__item">
                         <a href="{{url_for('views.profile')}}" style="text-decoration: none;">
                             <svg width="22" height="23" viewBox="0 0 22 23" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -44,7 +46,8 @@
                         <span>Profile</span>
 
                     </li>
-                    <li class="side-nav__item">
+                    {% if user.id==1 %}
+                        <li class="side-nav__item">
                         <a href="{{url_for('views.add_campaign')}}" style="text-decoration: none;">
                         <svg width="22" height="23" viewBox="0 0 22 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M20.1668 9.66671V14.25C20.1668 18.8334 18.3335 20.6667 13.7502 20.6667H8.25016C3.66683 20.6667 1.8335 18.8334 1.8335 14.25V8.75004C1.8335 4.16671 3.66683 2.33337 8.25016 2.33337H12.8335" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -56,6 +59,8 @@
 
                         <span>Category</span>
                     </li>
+                    {% endif %}
+
                     <li class="side-nav__item">
                         <a href="{{url_for('views.edit_campaigns')}}" style="text-decoration: none;">
                         <svg width="22" height="23" viewBox="0 0 22 23" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -65,7 +70,8 @@
                             <path d="M15.5834 12.6366V9.28167L6.88428 4.2583" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         </a>
-                        <span>Campaigns</span>
+                       {% if user.id==1 %}<span>Campaigns</span> {% else %}<span>My Campaigns</span>{% endif %}
+
                     </li>
                     <li class="side-nav__item">
                         <a href="{{url_for('views.transactions')}}" style="text-decoration: none;">
@@ -80,7 +86,8 @@
                             <path d="M7.59131 21.5837L8.70964 20.4653L7.59131 19.347" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         </a>
-                        <span>Transactions</span>
+                        {% if user.id==1 %}<span>Transactions</span> {% else %}<span>My Transactions</span>{% endif %}
+
                     </li>
                     <li class="side-nav__item">
                         <a href="{{url_for('views.inbox')}}" style="text-decoration: none;">
@@ -91,7 +98,7 @@
                             <path d="M7.3283 10.5833H7.33653" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         </a>
-                        <span>Inbox</span>
+                        {% if user.id==1 %}<span>Inbox</span> {% else %}<span>My Inbox</span>{% endif %}
                     </li>
                     <li class="side-nav__item">
                         <svg width="22" height="23" viewBox="0 0 22 23" fill="none" xmlns="http://www.w3.org/2000/svg">
