--- a/amardaan/templates/campaign_list.html
+++ b/amardaan/templates/campaign_list.html
@@ -52,16 +52,16 @@
 </div>
 
 
-        <!-- Add more product cards as needed -->
-
-    </div>
-    <div class="load-more">
-        <button id="loadMore">Show More</button>
-    </div>
-    <div class="totop">
-        <a href="#top">Back to Top</a>
-    </div>
-</div>
+{#        <!-- Add more product cards as needed -->#}
+{##}
+{#    </div>#}
+{#    <div class="load-more">#}
+{#        <button id="loadMore">Show More</button>#}
+{#    </div>#}
+{#    <div class="totop">#}
+{#        <a href="#top">Back to Top</a>#}
+{#    </div>#}
+{#</div>#}
 
 
 
