--- a/amardaan/static/css/campaign_details.css
+++ b/amardaan/static/css/campaign_details.css
@@ -1322,6 +1322,7 @@ input {
     text-align: center; 
     color: #4a90e2; 
     margin-top: 32px;
+    padding-bottom: 50px;
 } 
 
 #see_all_donors { 
