--- a/AmarDaan/static/css/about_us.css
+++ b/AmarDaan/static/css/about_us.css
@@ -1,20 +1,54 @@
-h1{
+h1 {
     text-align: center;
 }
-p{
+
+p {
     text-align: justify;
 }
-body{
+
+body {
     height: 100%;
     width: 100%;
     font-family: 'Bai Jamjuree', sans-serif;
 }
-.header{
+
+.header {
     padding: 10%;
 }
 
-.img-head{
-    height: 1%;
-    width: 50px;
+.img-head {
+    border-radius: 50%;
+    width: 150px; /* Adjust the width as needed */
+    height: 150px; /* Adjust the height as needed */
+    object-fit: cover; /* Ensures the image covers the entire container */
+}
 
+.head-img {
+    display: flex;
+    justify-content: center; /* Center the items horizontally */
+    align-items: center; /* Center the items vertically */
+    margin-top: 10px;
+}
+
+.team-member {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.member-info {
+    text-align: center;
+    margin-top: 10px;
+}
+
+/* Optional: Add margin to team members for spacing */
+.team-member + .team-member {
+    margin-top: 10px; /* Adjust the spacing between team members */
+}
+
+.heading-section{
+    padding-bottom: 50px;
+}
+.terms{
+    padding-bottom: 100px;
 }
