--- a/AmarDaan/static/css/login.css
+++ b/AmarDaan/static/css/login.css
@@ -32,7 +32,7 @@ span {
 }
 
 a {
-	color: #333;
+	color: #1a05ad;
 	font-size: 14px;
 	text-decoration: none;
 	margin: 15px 0;
@@ -72,6 +72,7 @@ form {
 	flex-direction: column;
 	padding: 0 50px;
 	height: 100%;
+	width: 100%;
 	text-align: center;
 }
 
@@ -88,7 +89,7 @@ input {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	height:85vh;
+	height:95vh;
 	width: 100%;
 	margin: -20px 0 50px;
 }
