--- a/AmarDaan/templates/about_us.html
+++ b/AmarDaan/templates/about_us.html
@@ -1,31 +1,44 @@
 {% extends 'base.html' %}
 {% block link %}
-<link rel="stylesheet" href="../static/css/privacy_policy.css">
-<link rel="stylesheet" href="../static/css/about_us.css">
-
+    <link rel="stylesheet" href="../static/css/privacy_policy.css">
+    <link rel="stylesheet" href="../static/css/about_us.css">
 {% endblock %}
+
 {% block content %}
-<div class="terms">
-    <div class="heading-section">
-        <h1>About Us</h1>
-        <hr>
-    </div>
-    <div class="terms-inside">
-        <p>Welcome to AmarDaan, your premier online crowdfunding platform dedicated to reshaping the landscape of philanthropy in Bangladesh. In a nation known for its resilience and compassion, AmarDaan emerges as a catalyst for positive change, addressing the challenges of transparency and trust that have occasionally overshadowed past charitable endeavors.</p>
+    <div class="terms">
+        <div class="heading-section">
+            <h1>About Us</h1>
+            <hr>
+        </div>
+        <div class="terms-inside">
+            <p>Welcome to AmarDaan, your premier online crowdfunding platform dedicated to reshaping the landscape of philanthropy in Bangladesh. In a nation known for its resilience and compassion, AmarDaan emerges as a catalyst for positive change, addressing the challenges of transparency and trust that have occasionally overshadowed past charitable endeavors.</p>
 
-        <p>Bangladeshis have a rich history of coming together for a good cause, whether in response to natural disasters, supporting victims of tragic events, or funding critical medical treatments. However, the noble intentions of these initiatives have sometimes been hindered by issues such as inadequate management and a lack of expertise in navigating the complexities of working in underprivileged regions or during emergencies.</p>
-        <p>The openness of AmarDaan sets a new standard, allowing donors to make informed decisions based on facts presented on our platform and the word-of-mouth reputation of the entities involved. Join us in reshaping the landscape of philanthropy in Bangladesh. AmarDaan is more than a crowdfunding platform; it's a movement that unites compassion, transparency, and trust to make a lasting impact on the lives of those in need. Together, let's create a legacy of positive change.</p>
-        <br>
-    </div>
-    <div class="heading-section">
-        <h1>The Team</h1>
-        <hr>
-    </div>
-    <div class="head-img">
-        <img class="img-head" src="../static/images/profile_bg.jpg" alt="Profile-img">
-    </div>
+            <p>Bangladeshis have a rich history of coming together for a good cause, whether in response to natural disasters, supporting victims of tragic events, or funding critical medical treatments. However, the noble intentions of these initiatives have sometimes been hindered by issues such as inadequate management and a lack of expertise in navigating the complexities of working in underprivileged regions or during emergencies.</p>
+            <p>The openness of AmarDaan sets a new standard, allowing donors to make informed decisions based on facts presented on our platform and the word-of-mouth reputation of the entities involved. Join us in reshaping the landscape of philanthropy in Bangladesh. AmarDaan is more than a crowdfunding platform; it's a movement that unites compassion, transparency, and trust to make a lasting impact on the lives of those in need. Together, let's create a legacy of positive change.</p>
+            <br>
+        </div>
+        <div class="heading-section">
+                <h1>The Team</h1>
+                <hr>
+            </div>
 
+            <!-- First Team Member -->
+            <div class="team-member">
+                <img class="img-head" src="../static/images/image2.png" alt="Profile-img-1">
+                <div class="member-info">
+                    <h3>Md. Mamun</h3>
+                    <p style="text-align: center">Founder & CEO</p>
+                </div>
+            </div>
 
-</div>
-
+            <!-- Second Team Member -->
+            <div class="team-member">
+                <img class="img-head" src="../static/images/image.jpg" alt="Profile-img-2">
+                <div class="member-info">
+                    <h3>Md . Ashraful Islam Talukder</h3>
+                    <p style="text-align: center">CTO</p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
