--- a/amardaan/templates/campaign.html
+++ b/amardaan/templates/campaign.html
@@ -46,19 +46,19 @@
                         Add team members, customize visibility, and more
                     </div>
                 </div>
-                <div class="step" onclick="navigateToStep(4)">
-                    <a class="step-header">
-                        <span class="camp-btn btn-circle" id="st4-circle">
-                            4
-                        </span>
-                        <div class="step-title">
-                            Payment Methods
-                        </div>
-                    </a>
-                    <div class="text">
-                        Enable payment processors for your fundraising page
-                    </div>
-                </div>
+{#                <div class="step" onclick="navigateToStep(4)">#}
+{#                    <a class="step-header">#}
+{#                        <span class="camp-btn btn-circle" id="st4-circle">#}
+{#                            4#}
+{#                        </span>#}
+{#                        <div class="step-title">#}
+{#                            Payment Methods#}
+{#                        </div>#}
+{#                    </a>#}
+{#                    <div class="text">#}
+{#                        Enable payment processors for your fundraising page#}
+{#                    </div>#}
+{#                </div>#}
             </div>
         </div>
         <div class="col2">
